--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Amazon.CDK" Version="1.102.0" />
     <PackageReference Include="Amazon.CDK.AWS.APIGateway" Version="1.102.0" />
     <PackageReference Include="Amazon.CDK.AWS.APIGatewayv2" Version="1.102.0" />
+    <PackageReference Include="Amazon.CDK.AWS.APIGatewayv2.Authorizers" Version="1.102.0" />
     <PackageReference Include="Amazon.CDK.AWS.APIGatewayv2.Integrations" Version="1.102.0" />
     <PackageReference Include="Amazon.CDK.AWS.CertificateManager" Version="1.102.0" />
     <PackageReference Include="Amazon.CDK.AWS.EC2" Version="1.102.0" />
